--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -1,13 +1,14 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "baseUrl": "",
-    "mapRoot": "./",
-    "outDir": "../static/out-tsc",
-    "module": "es2015",
+    "outDir": "./dist/out-tsc",
+    "baseUrl": "src",
     "sourceMap": true,
     "declaration": false,
     "moduleResolution": "node",
+    "noImplicitAny": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es5",
@@ -17,6 +18,9 @@
     "lib": [
       "es2016",
       "dom"
+    ],
+    "plugins": [
+      { "name": "tslint-language-service" }
     ]
   }
 }
