--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "lib/Server",
   "typings": "lib/Server",
   "scripts": {
-    "build:live": "nodemon --exec ts-node -- ./Server.ts",
+    "build:live": "nodemon --exec ts-node -- ./server.ts",
     "start": "npm run build:live"
   },
   "author": "",
@@ -57,8 +57,13 @@
   },
   "devDependencies": {
     "nodemon": "^1.11.0",
-    "ts-node": "^3.0.2",
+    "ts-node": "~3.0.4",
     "typescript": "^2.2.2",
-    "typings": "^2.1.0"
+    "typings": "^2.1.0",
+    "tslint": "~5.3.2",
+    "@types/node": "~6.0.60",
+    "codelyzer": "^3.1.2",
+    "tslint-eslint-rules": "^4.1.1",
+    "tslint-microsoft-contrib": "^5.0.1"
   }
 }
