Fixed up the node information

--- a/server/package.json
+++ b/server/package.json
@@ -2,8 +2,8 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "lib/Server",
-  "typings": "lib/Server",
+  "main": "./server",
+  "typings": "./server",
   "scripts": {
     "build:live": "nodemon --exec ts-node -- ./server.ts",
     "start": "npm run build:live"
@@ -11,17 +11,32 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/body-parser": "^1.16.5",
+    "@types/compression": "^0.0.34",
+    "@types/connect-livereload": "^0.5.31",
+    "@types/connect-mongo": "^0.0.33",
+    "@types/cookie-parser": "^1.4.1",
     "@types/core-js": "^0.9.41",
+    "@types/cors": "^2.8.1",
     "@types/crypto-js": "^3.1.33",
+    "@types/ejs": "^2.3.33",
+    "@types/express": "^4.0.37",
     "@types/express-jwt": "0.0.33",
-    "@types/mongoose": "^4.7.9",
+    "@types/express-session": "^1.15.3",
+    "@types/fs-extra": "^4.0.0",
+    "@types/helmet": "^0.0.36",
+    "@types/jsonwebtoken": "^7.2.3",
+    "@types/method-override": "^0.0.30",
+    "@types/mongoose": "^4.7.21",
     "@types/morgan": "^1.7.32",
     "@types/node": "^6.0.68",
-    "@types/passport": "^0.3.3",
+    "@types/passport": "^0.3.4",
+    "@types/passport-facebook": "^2.1.5",
     "@types/passport-google-oauth": "^1.0.33",
     "@types/passport-local": "^1.0.29",
     "@types/passport-twitter": "^1.0.30",
     "@types/q": "0.0.32",
+    "@types/serve-favicon": "^2.2.29",
     "@types/winston": "0.0.32",
     "body-parser": "^1.17.1",
     "composable-middleware": "^0.3.0",
@@ -57,13 +72,10 @@
   },
   "devDependencies": {
     "nodemon": "^1.11.0",
-    "ts-node": "~3.0.4",
-    "typescript": "^2.2.2",
-    "typings": "^2.1.0",
+    "ts-node": "^3.3.0",
     "tslint": "~5.3.2",
-    "@types/node": "~6.0.60",
-    "codelyzer": "^3.1.2",
     "tslint-eslint-rules": "^4.1.1",
-    "tslint-microsoft-contrib": "^5.0.1"
+    "tslint-microsoft-contrib": "^5.0.1",
+    "typescript": "^2.2.2"
   }
 }
