--- a/app/package.json
+++ b/app/package.json
@@ -12,18 +12,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.0.0",
-    "@angular/cdk": "^2.0.0-beta.8",
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/material": "^2.0.0-beta.8",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/router": "^4.0.0",
-    "classlist.js": "^1.1.20150312",
+    "@angular/animations": "4.3.6",
+    "@angular/cdk": "2.0.0-beta.8",
+    "@angular/common": "4.3.6",
+    "@angular/compiler": "4.3.6",
+    "@angular/core": "4.3.6",
+    "@angular/forms": "4.3.6",
+    "@angular/http": "4.3.6",
+    "@angular/material": "2.0.0-beta.8",
+    "@angular/platform-browser": "4.3.6",
+    "@angular/platform-browser-dynamic": "4.3.6",
+    "@angular/router": "4.3.6",
+    "classlist.js": "1.1.20150312",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "mdi": "^2.0.46",
@@ -33,10 +33,9 @@
   },
   "devDependencies": {
     "@angular/cli": "1.2.7",
-    "@angular/compiler-cli": "^4.0.0",
-    "@angular/language-service": "^4.0.0",
+    "@angular/compiler-cli": "4.3.6",
+    "@angular/language-service": "4.3.6",
     "@types/jasmine": "~2.5.53",
-    "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "codelyzer": "^3.1.2",
     "tslint-eslint-rules": "^4.1.1",
