--- a/app/package.json
+++ b/app/package.json
@@ -13,20 +13,25 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "4.3.6",
-    "@angular/cdk": "2.0.0-beta.8",
+    "@angular/cdk": "^2.0.0-beta.10",
     "@angular/common": "4.3.6",
     "@angular/compiler": "4.3.6",
     "@angular/core": "4.3.6",
     "@angular/forms": "4.3.6",
     "@angular/http": "4.3.6",
-    "@angular/material": "2.0.0-beta.8",
+    "@angular/material": "^2.0.0-beta.10",
     "@angular/platform-browser": "4.3.6",
     "@angular/platform-browser-dynamic": "4.3.6",
     "@angular/router": "4.3.6",
+    "@types/lodash": "^4.14.74",
+    "@types/node-uuid": "^0.0.28",
     "classlist.js": "1.1.20150312",
     "core-js": "^2.4.1",
+    "financejs": "^4.1.0",
     "hammerjs": "^2.0.8",
+    "lodash": "^4.17.4",
     "mdi": "^2.0.46",
+    "node-uuid": "^1.4.8",
     "rxjs": "^5.4.1",
     "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.14"
@@ -38,8 +43,6 @@
     "@types/jasmine": "~2.5.53",
     "@types/node": "~6.0.60",
     "codelyzer": "^3.1.2",
-    "tslint-eslint-rules": "^4.1.1",
-    "tslint-microsoft-contrib": "^5.0.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
@@ -51,6 +54,8 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
+    "tslint-eslint-rules": "^4.1.1",
+    "tslint-microsoft-contrib": "^5.0.1",
     "typescript": "~2.3.3"
   }
 }
