--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -7,6 +7,7 @@
     "declaration": false,
     "moduleResolution": "node",
     "noImplicitAny": true,
+    "skipLibCheck": true,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "emitDecoratorMetadata": true,
